--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,10 @@ spring.datasource.password=12345
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
+server.error.include-stacktrace=never
+
+api.security.token.secret=${JWT_SECRET:123456789}
+
 #Se usar yaml fica mais legivel
 #SO PODE USAR UM DOS DOIS
 #troca application.properties por application.yml
